--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Practice20200420</title>
   <!-- <base href="/"> -->
   <!-- 2021-06-17 22:40 -->
-  <base href="/mobile/">
+  <base href="/app/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.css"></head>
